GNOME Bugzilla – Bug 679341
autocluttersink doesn't proxy "ts-offset"
Last modified: 2012-09-25 17:58:43 UTC
It should have this property and proxy it if the child isn't instantiated yet. This breaks playbin2's av-offset.
I've reverted the use of autocluttersink in Totem for now: http://git.gnome.org/browse/totem/commit/?id=8106abb2f4b99f712571420869c1538f119496f0
Created attachment 217988 [details] test program This test case is supposed to show the audio being 1.5 seconds early. Replace autocluttersink with cluttersink, and it will work correctly.
Created attachment 218007 [details] [review] Patch for autocluttersink that fixes the issue The provided patch proxies the ts-offset property on autocluttersink in order to fix the issue.
Review of attachment 218007 [details] [review]: Code looks correct and fixes the issue in my tests.
pushed the patch master and clutter-gst-1.6 branch.