backend: Make av-offset property functional

See https://bugzilla.gnome.org/show_bug.cgi?id=679341